--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               <div class="input-field col s6">
                 <input type="text" placeholder="Enter Channel Name" id="channel-input">
                 <input type="submit" value="Get Channel Data" class="btn grey">
+                <button id="dislike">Dislike</button>
               </div>
             </form>
           </div>
